--- a/OpenLayer开发/OpenLayersStudy-master/loadOfflineMap_baidu.html
+++ b/OpenLayer开发/OpenLayersStudy-master/loadOfflineMap_baidu.html
@@ -56,7 +56,8 @@
             ],
             view: new ol.View({
                 // 设置故宫为地图中心
-                center: ol.proj.transform([116.403335, 39.924287], 'EPSG:4326', 'EPSG:3857'),
+                //center: ol.proj.transform([116.403335, 39.924287], 'EPSG:4326', 'EPSG:3857'),
+                center: ol.proj.fromLonLat([116.3905856200, 39.9164989600]),
                 zoom: 10
             }),
             target: 'map'
