--- a/OpenLayer开发/OpenLayersStudy-master/loadOfflineMap_baiduWidthDefault .html
+++ b/OpenLayer开发/OpenLayersStudy-master/loadOfflineMap_baiduWidthDefault .html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>演示在ol3中加载本地磁盘存储的离线瓦片地图</title>
-    <link rel="stylesheet" type="text/css" href="ol3.7.0/ol.css">
-    <script type="text/javascript" src="ol3.7.0/ol.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="js/ol3.7.0/ol.css">
+    <script type="text/javascript" src="js/ol3.7.0/ol.js" charset="utf-8"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
