--- a/OpenLayer开发/OpenLayersStudy-master/demo.html
+++ b/OpenLayer开发/OpenLayersStudy-master/demo.html
@@ -2,12 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <title>OpenLayers功能测试</title>
-    <link href="js/ol5.2.0/ol.css" rel="stylesheet" />
-    <script src="js/require-2.1.11.js"></script>
-    <script src="js/ol5.2.0/ol.js"></script>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/demo.js"></script>
+    <!--<script src="js/require-2.1.11.js"></script>-->
+    <!-- ol5.3.0 -->
+    <link href="./js/ol5.3.0/ol.css" rel="stylesheet" />
+    <script src="./js/ol5.3.0/ol.js"></script>
+    <!-- ol5.2.0 -->
+    <!--<link href="js/ol5.2.0/ol.css" rel="stylesheet" />
+    <script src="js/ol5.2.0/ol.js"></script>-->
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/demo.js"></script>
     <!--<script type="application/json" src="js/test.json"></script>-->
     <style>
         button {
