--- a/OpenLayer开发/OpenLayersStudy-master/ol-cesuim-test.html
+++ b/OpenLayer开发/OpenLayersStudy-master/ol-cesuim-test.html
@@ -19,15 +19,15 @@
     <!-- 页面功能 -->
     <script type="text/javascript">
         function init() {
-            const dragAndDropInteraction = new ol.interaction.DragAndDrop({
-                formatConstructors: [
-                  ol.format.GPX,
-                  ol.format.GeoJSON,
-                  ol.format.IGC,
-                  ol.format.KML,
-                  ol.format.TopoJSON
-                ]
-            });
+            //const dragAndDropInteraction = new ol.interaction.DragAndDrop({
+            //    formatConstructors: [
+            //      ol.format.GPX,
+            //      ol.format.GeoJSON,
+            //      ol.format.IGC,
+            //      ol.format.KML,
+            //      ol.format.TopoJSON
+            //    ]
+            //});
             const image = new ol.style.Circle({
                 radius: 5,
                 fill: null,
@@ -214,7 +214,15 @@
 
                     return style;
                 }
-            })
+            });
+            const tileLayer = new ol.layer.Tile({
+                baseLayer: true,
+                source: new ol.source.OSM(),
+                //source: new ol.source.TileArcGISRest({
+                //    url: "https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer"
+                //}),
+                visible: true
+            });
 
             view = new ol.View({
                 center: ol.proj.transform([106, 30], 'EPSG:4326', 'EPSG:3857'),
@@ -222,18 +230,14 @@
             });
             map = new ol.Map({
                 interactions: ol.interaction.defaults().extend([selectInteraction]),
-                layers: [new ol.layer.Tile({
-                    baseLayer: true,
-                    source: new ol.source.OSM(),
-                    visible: true
-                }), vectorLayer],
+                layers: [tileLayer, vectorLayer],
                 target: 'map',
-                controls: ol.control.defaults({
-                    attributionOptions: /** @type {olx.control.AttributionOptions} */ ({
-                        collapsible: false
-                    })
-                }),
-                //loadTilesWhileAnimating: true,
+                //controls: ol.control.defaults({
+                //    attributionOptions: /** @type {olx.control.AttributionOptions} */ ({
+                //        collapsible: false
+                //    })
+                //}),
+                loadTilesWhileAnimating: true,
                 view: view
             });
 
@@ -242,6 +246,7 @@
             setTimeout(function () {
                 vectorLayer.setSource(vectorSource);
             }, 2000);
+            //vectorLayer.setSource(vectorSource);
 
             ///三维
             //map3d = new olcs.OLCesium({ map: map, target: 'map3d' });
@@ -296,10 +301,11 @@
                             center: ol.extent.getCenter(extent),
                             extent: extent,
                             //nearest: true,
-                            //zoom: 6,
-                            minZoom: 3,
-                            maxZoom: 10,
+                            zoom: 4,
+                            //minZoom: 3,
+                            //maxZoom: 10,
                             easing: ol.easing.inAndOut,
+                            callback: function () { alert("结束") }
                             //duration: 2000
                         });
                     }
